

2.0-beta3
# now require PHP >= 5.4.0
# use Composer and Bower as much as possible in order to outsource at the maximum
# replace Router by Symfony Routing component
# refactor administration application
	# use internal router
	# use controllers
	# use templates
# refactor install application
	# use internal router
	# use controllers
	# use templates
# refactor modules files structure
# replace PHPThumb by Imagine
# refactor flash messages device
# change Yaml files extension .yaml to .yml
! implement Symfony HttpFoundation
! remove version file and move changelog file for security reasons


2.0-beta2 (2013-12-08)
# Tao is now the Okatea core namespace so old oktInc/classes
where moved to oktInc/Tao and follow psr-0
# remove oktCore::redirect
# remove methods deprecated in 1.0
! show debug mode enabled info
! remove unused dev and debug panels from config page
. replace Clearbricks netHttp by Guzzle


2.0-beta1 (2013-12-03)
# introduce composer components
	# remove oktInc/vendor
	! doctrine/dbal 2.5.*@dev
	! dotclear/clearbricks dev-default
	! erusev/parsedown dev-master
	! ezyang/htmlpurifier dev-master
	! ircmaxell/password-compat dev-master
	! leafo/lessphp 0.4.*
	! masterexploder/phpthumb dev-master
	! mobiledetect/mobiledetectlib dev-master
	! simplepie/simplepie dev-master
	! swiftmailer/swiftmailer 5.1.*@dev
	! symfony/debug 2.3.*@dev
	! symfony/templating 2.5.*@dev
	! symfony/yaml 2.5.*@dev
# remove minify lib
# remove oktDebug class
# remove internal autoloader, now use composer autoloader instead
# all modules bumped to version 2.0-rc1


1.0 (2013-11-26)
! improve perfs by replacing somes functions by PHP natives ones
! add captchas to estimate module


1.0.BETA.5 (2013-11-24)
# new famfamfam sprites (replace previous ones)
! new tinyMCE 4 module
! new estimate module
! superadmin can now remove admin logs
- bug fixes introduced in the previous beta
- remove buggy switch admin view feature
- fix jQuery UI upload custom theme
. deletion of old stuff

